--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ header {
 }
 
 #head {
+  <link rel="shortcut icon" href="https://yanxuan.nosdn.127.net/56761fad551a0b988510a66af2840cea.png" />
+<link rel="bookmark" href="https://yanxuan.nosdn.127.net/56761fad551a0b988510a66af2840cea.png" type="image/x-icon"　/>
   background-image: linear-gradient(to top, #537895 0%, #09203f 100%);
 }
 
